--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ng-idle/core": "^2.0.0-beta.10",
+    "@ng-idle/keepalive": "^2.0.0-beta.10",
+    "angular2-moment": "^1.3.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
